install vendor packages in lib/vendor

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "name": "kuus",
             "email": "kunderikuus@gmail.com"
         }
-    ]
+    ],
+    "config": {
+        "vendor-dir": "lib/vendor"
+    }
 }
