--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "license": "GPL-2.0",
     "authors": [
         {
+            "name": "kuus",
+            "email": "kunderikuus@gmail.com"
+        }
+        {
             "name": "padalec",
             "email": ""
         }
